<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trailicious</string>
    <string name="action_settings">Ajustes</string>

    <!-- Lista de Textos del Drawer -->
    <string-array name="navigation_drawer_items_text">
        <item>Entrenamiento</item>
        <item>Historial</item>
        <item>Rutas</item>
    </string-array>

    <!-- Lista de iconos del drawer -->
    <!--<string-array name="navigation_drawer_items_images">-->
        <!--<item>R.drawable.icon_drawer_entrenamiento</item>-->
        <!--<item>R.drawable.icon_drawer_historial</item>-->
        <!--<item>R.drawable.icon_drawer_ruta</item>-->
    <!--</string-array>-->

    <string-array name="navigation_drawer_items_images">
        <item>@drawable/icon_drawer_entrenamiento</item>
        <item>@drawable/icon_drawer_historial</item>
        <item>@drawable/icon_drawer_ruta</item>
    </string-array>

    <!-- Menu Opciones -->
    <string name="action_desconectar">Desconectar</string>

    <!-- Accesibilidad -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login Google+ -->
    <string name="action_sign_out">Cerrar Sesión</string>
    <string name="action_revoke">Desconectar App</string>
    <string name="openDrawer">Drawer Abierto</string>
    <string name="closeDrawer">Drawer Cerrado</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Textos GoogleLoginActivity -->
    <string name="conectando">Conectando...</string>
    <string name="conectado">¡Conectado!</string>

    <!-- Textos Map Fragment -->
    <string name="distancia">Distancia</string>
    <string name="duracion">Duración</string>
    <string name="iniciar">Iniciar</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="gps_encendido">GPS Encendido</string>
    <string name="gps_apagado">GPS Apagado</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_main">NewMainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>

    <string name="facebook_app_id">746029132117821</string>
    <string name="google_api_key">AIzaSyDRs7b_cEzG3L8yhRcK4HdX6dJyijpYc64</string>
    <string name="no_hay_datos">No hay datos que mostrar</string>

</resources>
